--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
   <section id="contact">
     <h2>Contact Me</h2>
-    <form action="https://formspree.io/f/mvgalaeb" method="POST">
+    <form action="https://formspree.io/f/xblkpwrw"method="POST">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" placeholder="Your Message" required></textarea>
@@ -241,7 +241,7 @@
     </form>
   </section>
 
-  <a href="https://wa.me/9335540370" class="whatsapp-float" target="_blank" title="Chat on WhatsApp">💬</a>
+  <a href="https://wa.me/112" class="whatsapp-float" target="_blank" title="Chat on WhatsApp">💬</a>
 
   <footer>
     <p>© 2025 Chitra</p>
